--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ show_downloads: true
 theme: jekyll-theme-cayman
 github:
   is_project_page: true
-  repository_url: https://github.com/bowfolios/bowfolios
+  repository_url: https://github.com/JohnsonsList.io
 
 gems:
   - jekyll-mentions
