--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Johnslist
+title: Johnsonslist
 description: Craigslist style of webiste for UH Manoa community
 google_analytics:
 show_downloads: false
