--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: meteor-application-template-react
-description: Craigslist style of webiste for UH Manoa community
+description: Craigslist style of website for UH Manoa community
 google_analytics:
 show_downloads: false
 theme: jekyll-theme-cayman
