--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Johnsonslist
 description: Craigslist style of website for UH Manoa community
 google_analytics:
 show_downloads: false
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 github:
   is_project_page: true
   repository_url: https://github.com/Johnsonslist/Johnsonslist
