--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Johnsonslist
-logo : (images/JL-logo.png)
+logo : images/JL-logo.png
 description: Craigslist style of website for UH Manoa community
 google_analytics:
 show_downloads: false
