--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Johnsonslist
-description: Craigslist style of website for UH Manoa community
+description: Craigslist style of website for the UH Manoa community where they can sell various dorm goods to other peers.
 google_analytics:
 show_downloads: false
 theme: jekyll-theme-minimal
-github:
-  is_project_page: true
-  repository_url: https://github.com/Johnsonslist/Johnsonslist
+# github:
+#   is_project_page: true
+#   repository_url: https://github.com/Johnsonslist/Johnsonslist
 gems:
   - jekyll-mentions
