testing title change

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Johnsonslist
+title: Area 51 Raid Squad
 description: Craigslist style of website for the UH Manoa community where they can sell various dorm goods to other peers.
 google_analytics:
 show_downloads: false
